--- a/web/css/forms.css
+++ b/web/css/forms.css
@@ -94,15 +94,15 @@ button {
   border: 1px solid #ff043f !important;
   border-radius: 5px;
   color: #ff043f !important;
-  margin: 0 25px 10px 0 !important;
-  padding: 0 0 0 10px !important;
+  margin: 0 10px 10px 0;
+  padding: 0;
 }
 
 .form-errors li {
   background: url(../img/error.gif) no-repeat 0 9px !important;
   list-style: none !important;
-  margin: 0 !important;
-  padding: 9px 10px 7px 24px !important;
+  margin: 0;
+  padding: 9px 0 7px 24px;
 }
 
 .form-messages {
